--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <nav>
         <a href="index.html">Home</a>
         <a href="register.html">Register</a>
+        <a href="services.html">Register</a>
       </nav>
     </header>
 
