feat: add services.js

--- a/register.html
+++ b/register.html
@@ -13,11 +13,12 @@
         <nav>
           <a href="index.html">Home</a>
           <a href="register.html">Register</a>
+          <a href="services.html">Services</a>
         </nav>
-    </header>
+      </header>
 
-    <main class="container">
-        <h2>Register a new pet</h2>
+    <main class="container mb-4">
+        <h2 class="text-center">Register a new pet</h2>
         <div class="form-container">
             <div class="mb-3">
                 <label class="form-label">Name:*</label>
@@ -41,6 +42,8 @@
             </div>
         </div>
       </main>
+
+      <hr class="my-4">
 
       <section class="container">
         <h2>Registered pets</h2>
