--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./styles/mystyle.css">
     <title>Document</title>
   </head>
   <body>
@@ -14,7 +16,7 @@
       <nav>
         <a href="index.html">Home</a>
         <a href="register.html">Register</a>
-        <a href="services.html">Register</a>
+        <a href="services.html">Services</a>
       </nav>
     </header>
 
