--- a/services.html
+++ b/services.html
@@ -6,40 +6,42 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="./styles/mystyle.css">
+
     <title>The Fashion Pet Services</title>
   </head>
   <body>
     <header>
-      <h2>Register a new service</h2>
+      <h1>The Fashion Pet</h1>
       <nav>
-        <!-- home <a href="index.html>Home</a>"-->
-        <!-- register -->
-        <!-- services -->
+        <a href="index.html">Home</a>
+        <a href="register.html">Register</a>
+        <a href="services.html">Services</a>
       </nav>
     </header>
 
     <main>
-      <div>
-        <div>
-          <label
-            class="form-label"
-            for=""
-            >Description</label
-          >
-          <input
-            class="form-control"
-            id="txtDescription"
-            type="text"
-          />
+      <h2 class="text-center">Register a new service</h2>
+      <div class="form-container">
+        <!-- Description Input -->
+       
+        <div class="mb-4">          
+          <label class="form-label" for="">Description*</label>
+          <input class="form-control" id="txtDescription" type="text" />
+          <small class="descriptionValidationMesssage">This is a required field</small>
         </div>
 
-        <div>
-          <!-- Price -->
+        <!-- Price input -->
+        <div class="">
+          <label class="form-label" for="">Price*</label>
+          <input class="form-control" id="txtPrice" type="number" />
+          <small class="priceValidationMessage">This is a required field</small>
         </div>
 
         <div>
           <!-- Btn Register -->
-          <button onclick="register()">Register</button>
+          <button onclick="register()" class="btn btn-dark mt-4">Register</button>
         </div>
       </div>
     </main>
