style: update pets table

--- a/register.html
+++ b/register.html
@@ -56,15 +56,15 @@
         <table class="table">
             <thead>
                 <tr>
-                    <td>#</td>
-                    <td>Name</td>
-                    <td>Age</td>
-                    <td>Gender</td>
-                    <td>Breed</td>
-                    <td>Actions</td>
+                    <th>#</th>
+                    <th>Name</th>
+                    <th>Age</th>
+                    <th>Gender</th>
+                    <th>Breed</th>
+                    <th>Actions</th>
                 </tr>
             </thead>
-            <tbody id="petTable">
+            <tbody id="petTable" class="table-group-divider">
                 
             </tbody>
         </table>
